--- a/docs/presentations/custom.css
+++ b/docs/presentations/custom.css
@@ -35,3 +35,15 @@
 .spaced-links {
   margin-top: 1rem;
 }
+
+/* QR code sizing */
+.qr-code-small {
+  width: 200px;
+  max-width: 200px;
+  margin: 0 auto;
+}
+
+.qr-code-small img {
+  width: 100%;
+  height: auto;
+}
